--- a/arch/arm64/configs/jason_defconfig
+++ b/arch/arm64/configs/jason_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-iamehsangh-EAS"
+CONFIG_LOCALVERSION="-ArchipelagoKernel"
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
